# Ruty

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  build_local.sh  main.py  pyproject.toml  run-tray.sh  run_backend.py  ruty-backend-x86_64-unknown-linux-gnu.spec  ruty-backend.spec  ruty.sqlite  ruty.sqlite-shm  ruty.sqlite-wal  toggle-ruty.sh  tray.py
.github/workflows/: release.yml
proto/: ruty.proto
ruty/: __init__.py  agent.py  cli.py  config.py  extraction.py  gui.py  memory.py  providers.py  server.py  state.py
ruty/tools/: __init__.py  filesystem.py  memory.py  system.py
src/: app.rs  commands.rs  hotkey.rs  index.html  ipc.rs  main.rs  settings.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: apps.rs  clipboard.rs  commands.rs  lib.rs  main.rs
src/backend/: api.rs  mod.rs  sidecar.rs  types.rs
src/native/: apps.rs  files.rs  mod.rs
src/rpc/: client.rs  mod.rs  server.rs
src/scripts/: app.js  commands.js  results.js  settings.js  tauri-store.js
src/styles/: main.css
src/ui/: chat_view.rs  mod.rs  results_list.rs  search_bar.rs  theme.rs
