[package]
name = "ruty"
version = "0.3.0"
description = "AI-powered productivity launcher with memory"
authors = ["lothnic"]
edition = "2021"
license = "MIT"

[[bin]]
name = "ruty"
path = "src/main.rs"

[dependencies]
# GUI Framework
iced = { version = "0.13", features = ["tokio", "advanced", "image"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# HTTP Client (for Python backend)
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Global Hotkey
global-hotkey = "0.6"

# System Tray (optional)
tray-icon = "0.19"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
once_cell = "1.19"
dirs = "5"

# Unix Signals (for Wayland hotkey workaround)
signal-hook = "0.3"

# gRPC for daemon IPC (Gauntlet-style)
tonic = "0.12"
prost = "0.13"
uuid = { version = "1.19.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
