[project]
name = "ruty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    
    # LangGraph stack
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    
    # Existing
    "openai>=1.0.0",
    "supermemory>=3.4.0",
    
    # Desktop app
    "PyQt5>=5.15.0",
    "pynput>=1.7.0",
    
    # Tauri backend API
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "websockets>=11.0",
]

# Override pyqt5-qt5 for Windows - it has no Windows wheels, and PyQt5
# Windows wheels bundle the Qt libraries directly, so it's not needed
[tool.uv]
override-dependencies = [
    "pyqt5-qt5>=5.15.0; sys_platform != 'win32'",
]
